// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cli Should generate fixtures file 1`] = `
"import { Fixture } from "@ovotech/laminar-fixtures";

/**
 * Fixtures generated for postgres tables */

/**
 * Fixture type for table "accounts" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myaccounts = fixture<accounts>({
 *   // ...
 * });
 *
 * const buildaccounts: BuildFixture<accounts> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type accounts = Fixture<{
    beneficiary_account_number?: string;
    beneficiary_name?: string;
    beneficiary_sort_code?: string;
    created_at?: Date;
    customer_id: number;
    end_on?: Date;
    id: number;
    payment_plan?: "BACs" | "Cheque" | "Internal Transfer";
    payment_suspended?: boolean;
    source_system_id?: number;
    start_on?: Date;
    state?: "Active" | "Closed" | "Dispute" | "Pending";
    updated_at?: Date;
}>;

/**
 * Fixture type for table "addresses" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myaddresses = fixture<addresses>({
 *   // ...
 * });
 *
 * const buildaddresses: BuildFixture<addresses> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type addresses = Fixture<{
    address_line_1?: string;
    address_line_2?: string;
    address_line_3?: string;
    city?: string;
    country: string;
    county?: string;
    created_at?: Date;
    id: number;
    postcode: string;
    source_system_id?: number;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "animals" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myanimals = fixture<animals>({
 *   // ...
 * });
 *
 * const buildanimals: BuildFixture<animals> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type animals = Fixture<{
    id: number;
    name: string;
}>;

/**
 * Fixture type for table "comms" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mycomms = fixture<comms>({
 *   // ...
 * });
 *
 * const buildcomms: BuildFixture<comms> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type comms = Fixture<{
    comm_id: string;
    id: number;
    status: string;
}>;

/**
 * Fixture type for table "contacts" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mycontacts = fixture<contacts>({
 *   // ...
 * });
 *
 * const buildcontacts: BuildFixture<contacts> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type contacts = Fixture<{
    address_id: number;
    created_at?: Date;
    email?: string;
    first_name: string;
    id: number;
    last_name: string;
    phone?: string;
    source_system_id?: number;
    title?: "Dr" | "Miss" | "Mr" | "Mrs" | "Ms";
    updated_at?: Date;
}>;

/**
 * Fixture type for table "contracts" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mycontracts = fixture<contracts>({
 *   // ...
 * });
 *
 * const buildcontracts: BuildFixture<contracts> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type contracts = Fixture<{
    account_id: number;
    confirmation_on?: Date;
    contact_id: number;
    created_at?: Date;
    export_percentage_split?: number;
    export_tariff_id?: number;
    generation_percentage_split?: number;
    generation_tariff_id?: number;
    id: number;
    installation_id: number;
    scheme_account_reference: string;
    scheme_type: "FIT" | "SEG";
    source_system_id?: number;
    terms_and_conditions_agreed: boolean;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "customers" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mycustomers = fixture<customers>({
 *   // ...
 * });
 *
 * const buildcustomers: BuildFixture<customers> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type customers = Fixture<{
    billing_address_id?: number;
    company_name?: string;
    company_reg_number?: string;
    company_vat_number?: string;
    created_at?: Date;
    customer_reference: string;
    generator_id?: string;
    id: number;
    orion_account_number?: string;
    primary_contact_id?: number;
    secondary_contact_id?: number;
    source_system_id?: number;
    tertiary_contact_id?: number;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "db_users" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mydb_users = fixture<db_users>({
 *   // ...
 * });
 *
 * const builddb_users: BuildFixture<db_users> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type db_users = Fixture<{
    id: number;
    name: string;
}>;

/**
 * Fixture type for table "db_users2" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mydb_users2 = fixture<db_users2>({
 *   // ...
 * });
 *
 * const builddb_users2: BuildFixture<db_users2> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type db_users2 = Fixture<{
    id: number;
    name: string;
}>;

/**
 * Fixture type for table "fixtures_meter_reads" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myfixtures_meter_reads = fixture<fixtures_meter_reads>({
 *   // ...
 * });
 *
 * const buildfixtures_meter_reads: BuildFixture<fixtures_meter_reads> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type fixtures_meter_reads = Fixture<{
    created_at?: Date;
    date_on: Date;
    deleted_at?: Date;
    history?: string;
    id: number;
    is_accepted?: boolean;
    meter_id: number;
    reason?: string;
    source_system_id?: number;
    submitted_at?: Date;
    tolerance?: string;
    type: "Closing" | "Meter Verification" | "Opening" | "Quarterly";
    updated_at?: Date;
    value: number;
}>;

/**
 * Fixture type for table "installation_meters" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myinstallation_meters = fixture<installation_meters>({
 *   // ...
 * });
 *
 * const buildinstallation_meters: BuildFixture<installation_meters> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type installation_meters = Fixture<{
    created_at?: Date;
    end_on?: Date;
    id: number;
    installation_id: number;
    meter_id: number;
    meter_type: "Export" | "Generation";
    source_system_id?: number;
    start_on?: Date;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "installations" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myinstallations = fixture<installations>({
 *   // ...
 * });
 *
 * const buildinstallations: BuildFixture<installations> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type installations = Fixture<{
    address_id: number;
    battery_installation_date_on?: Date;
    commissioned_on?: Date;
    created_at?: Date;
    date_grant_repaid?: Date;
    decommissioned_on?: Date;
    dnc_reference: string;
    eligibility_end_on?: Date;
    eligibility_start_on?: Date;
    epc_date?: Date;
    epc_number?: number;
    epc_rate?: string;
    export_mpan?: string;
    export_type?: "Deemed" | "Metered Export" | "Off Grid" | "PPA";
    has_battery_storage?: boolean;
    id: number;
    inspected_on?: Date;
    installed_on: Date;
    legacy_fit_db_id?: string;
    mcs_reference: string;
    name?: string;
    name_of_grant?: string;
    property_type: "Commercial" | "Domestic" | "Farm" | "Industrial" | "Not for profit" | "Other" | "School/Education";
    reverified_on?: Date;
    roofit_reference?: string;
    source_system_id?: number;
    supply_mpan?: string;
    switched_from?: string;
    switched_on?: Date;
    switched_to?: string;
    technology_type: "AD" | "CHP" | "H" | "PV" | "W";
    tic_reference: string;
    type: "Extension of an existing FiT-accredited installation" | "New build" | "None" | "Retrofit" | "Standalone";
    updated_at?: Date;
    value_of_grant?: string;
    verified_on?: Date;
}>;

/**
 * Fixture type for table "issues" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myissues = fixture<issues>({
 *   // ...
 * });
 *
 * const buildissues: BuildFixture<issues> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type issues = Fixture<{
    account_id?: number;
    account_identifier?: string;
    comments?: string;
    created_at: Date;
    description: string;
    due_date?: Date;
    id: number;
    payload?: string;
    reference_id: number;
    reference_type: "Account" | "Account Levelisation" | "Comm" | "Installation" | "Meter" | "Payment" | "Read";
    state: "Awaiting Answers" | "Blocked" | "Closed" | "In Progress" | "Open" | "Resolved" | "Unresolvable";
    type: "Account Levelisation" | "Account Pending" | "Installation" | "Meter" | "Payment" | "Read Tolerance";
}>;

/**
 * Fixture type for table "meter_reads" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mymeter_reads = fixture<meter_reads>({
 *   // ...
 * });
 *
 * const buildmeter_reads: BuildFixture<meter_reads> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type meter_reads = Fixture<{
    date: Date;
    id: number;
    serial_number: string;
    value: string;
}>;

/**
 * Fixture type for table "meters" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mymeters = fixture<meters>({
 *   // ...
 * });
 *
 * const buildmeters: BuildFixture<meters> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type meters = Fixture<{
    created_at?: Date;
    distribution_region?: string;
    gsp?: string;
    hh_metered: boolean;
    id: number;
    make: string;
    model: string;
    mpan: string;
    serial_number: string;
    shared: boolean;
    source_system_id?: number;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "pets" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mypets = fixture<pets>({
 *   // ...
 * });
 *
 * const buildpets: BuildFixture<pets> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type pets = Fixture<{
    id: number;
    name: string;
    tag?: string;
}>;

/**
 * Fixture type for table "tariff_rates" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mytariff_rates = fixture<tariff_rates>({
 *   // ...
 * });
 *
 * const buildtariff_rates: BuildFixture<tariff_rates> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type tariff_rates = Fixture<{
    created_at?: Date;
    end_date_on?: Date;
    id: number;
    rate: string;
    source_system_id?: number;
    start_date_on: Date;
    tariff_id: number;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "tariffs" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mytariffs = fixture<tariffs>({
 *   // ...
 * });
 *
 * const buildtariffs: BuildFixture<tariffs> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type tariffs = Fixture<{
    code: string;
    created_at?: Date;
    id: number;
    source_system_id?: number;
    type: "Export" | "Generation" | "SEG";
    updated_at?: Date;
}>;

/**
 * Fixture type for table "transactions" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const mytransactions = fixture<transactions>({
 *   // ...
 * });
 *
 * const buildtransactions: BuildFixture<transactions> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type transactions = Fixture<{
    amount: number;
    id?: string;
}>;

/**
 * Fixture type for table "users" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myusers = fixture<users>({
 *   // ...
 * });
 *
 * const buildusers: BuildFixture<users> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type users = Fixture<{
    created_at?: Date;
    id: number;
    name: string;
}>;
"
`;

exports[`Cli Should generate fixtures file with suffix and title case 1`] = `
"import { Fixture } from "@ovotech/laminar-fixtures";

/**
 * Fixtures generated for postgres tables */

/**
 * Fixture type for table "accounts" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myAccountsFixture = fixture<AccountsFixture>({
 *   // ...
 * });
 *
 * const buildAccountsFixture: BuildFixture<AccountsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type AccountsFixture = Fixture<{
    beneficiary_account_number?: string;
    beneficiary_name?: string;
    beneficiary_sort_code?: string;
    created_at?: Date;
    customer_id: number;
    end_on?: Date;
    id: number;
    payment_plan?: "BACs" | "Cheque" | "Internal Transfer";
    payment_suspended?: boolean;
    source_system_id?: number;
    start_on?: Date;
    state?: "Active" | "Closed" | "Dispute" | "Pending";
    updated_at?: Date;
}>;

/**
 * Fixture type for table "addresses" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myAddressesFixture = fixture<AddressesFixture>({
 *   // ...
 * });
 *
 * const buildAddressesFixture: BuildFixture<AddressesFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type AddressesFixture = Fixture<{
    address_line_1?: string;
    address_line_2?: string;
    address_line_3?: string;
    city?: string;
    country: string;
    county?: string;
    created_at?: Date;
    id: number;
    postcode: string;
    source_system_id?: number;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "animals" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myAnimalsFixture = fixture<AnimalsFixture>({
 *   // ...
 * });
 *
 * const buildAnimalsFixture: BuildFixture<AnimalsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type AnimalsFixture = Fixture<{
    id: number;
    name: string;
}>;

/**
 * Fixture type for table "comms" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myCommsFixture = fixture<CommsFixture>({
 *   // ...
 * });
 *
 * const buildCommsFixture: BuildFixture<CommsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type CommsFixture = Fixture<{
    comm_id: string;
    id: number;
    status: string;
}>;

/**
 * Fixture type for table "contacts" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myContactsFixture = fixture<ContactsFixture>({
 *   // ...
 * });
 *
 * const buildContactsFixture: BuildFixture<ContactsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type ContactsFixture = Fixture<{
    address_id: number;
    created_at?: Date;
    email?: string;
    first_name: string;
    id: number;
    last_name: string;
    phone?: string;
    source_system_id?: number;
    title?: "Dr" | "Miss" | "Mr" | "Mrs" | "Ms";
    updated_at?: Date;
}>;

/**
 * Fixture type for table "contracts" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myContractsFixture = fixture<ContractsFixture>({
 *   // ...
 * });
 *
 * const buildContractsFixture: BuildFixture<ContractsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type ContractsFixture = Fixture<{
    account_id: number;
    confirmation_on?: Date;
    contact_id: number;
    created_at?: Date;
    export_percentage_split?: number;
    export_tariff_id?: number;
    generation_percentage_split?: number;
    generation_tariff_id?: number;
    id: number;
    installation_id: number;
    scheme_account_reference: string;
    scheme_type: "FIT" | "SEG";
    source_system_id?: number;
    terms_and_conditions_agreed: boolean;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "customers" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myCustomersFixture = fixture<CustomersFixture>({
 *   // ...
 * });
 *
 * const buildCustomersFixture: BuildFixture<CustomersFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type CustomersFixture = Fixture<{
    billing_address_id?: number;
    company_name?: string;
    company_reg_number?: string;
    company_vat_number?: string;
    created_at?: Date;
    customer_reference: string;
    generator_id?: string;
    id: number;
    orion_account_number?: string;
    primary_contact_id?: number;
    secondary_contact_id?: number;
    source_system_id?: number;
    tertiary_contact_id?: number;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "db_users" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myDbUsersFixture = fixture<DbUsersFixture>({
 *   // ...
 * });
 *
 * const buildDbUsersFixture: BuildFixture<DbUsersFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type DbUsersFixture = Fixture<{
    id: number;
    name: string;
}>;

/**
 * Fixture type for table "db_users2" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myDbUsers2Fixture = fixture<DbUsers2Fixture>({
 *   // ...
 * });
 *
 * const buildDbUsers2Fixture: BuildFixture<DbUsers2Fixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type DbUsers2Fixture = Fixture<{
    id: number;
    name: string;
}>;

/**
 * Fixture type for table "fixtures_meter_reads" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myFixturesMeter_readsFixture = fixture<FixturesMeter_readsFixture>({
 *   // ...
 * });
 *
 * const buildFixturesMeter_readsFixture: BuildFixture<FixturesMeter_readsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type FixturesMeter_readsFixture = Fixture<{
    created_at?: Date;
    date_on: Date;
    deleted_at?: Date;
    history?: string;
    id: number;
    is_accepted?: boolean;
    meter_id: number;
    reason?: string;
    source_system_id?: number;
    submitted_at?: Date;
    tolerance?: string;
    type: "Closing" | "Meter Verification" | "Opening" | "Quarterly";
    updated_at?: Date;
    value: number;
}>;

/**
 * Fixture type for table "installation_meters" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myInstallationMetersFixture = fixture<InstallationMetersFixture>({
 *   // ...
 * });
 *
 * const buildInstallationMetersFixture: BuildFixture<InstallationMetersFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type InstallationMetersFixture = Fixture<{
    created_at?: Date;
    end_on?: Date;
    id: number;
    installation_id: number;
    meter_id: number;
    meter_type: "Export" | "Generation";
    source_system_id?: number;
    start_on?: Date;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "installations" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myInstallationsFixture = fixture<InstallationsFixture>({
 *   // ...
 * });
 *
 * const buildInstallationsFixture: BuildFixture<InstallationsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type InstallationsFixture = Fixture<{
    address_id: number;
    battery_installation_date_on?: Date;
    commissioned_on?: Date;
    created_at?: Date;
    date_grant_repaid?: Date;
    decommissioned_on?: Date;
    dnc_reference: string;
    eligibility_end_on?: Date;
    eligibility_start_on?: Date;
    epc_date?: Date;
    epc_number?: number;
    epc_rate?: string;
    export_mpan?: string;
    export_type?: "Deemed" | "Metered Export" | "Off Grid" | "PPA";
    has_battery_storage?: boolean;
    id: number;
    inspected_on?: Date;
    installed_on: Date;
    legacy_fit_db_id?: string;
    mcs_reference: string;
    name?: string;
    name_of_grant?: string;
    property_type: "Commercial" | "Domestic" | "Farm" | "Industrial" | "Not for profit" | "Other" | "School/Education";
    reverified_on?: Date;
    roofit_reference?: string;
    source_system_id?: number;
    supply_mpan?: string;
    switched_from?: string;
    switched_on?: Date;
    switched_to?: string;
    technology_type: "AD" | "CHP" | "H" | "PV" | "W";
    tic_reference: string;
    type: "Extension of an existing FiT-accredited installation" | "New build" | "None" | "Retrofit" | "Standalone";
    updated_at?: Date;
    value_of_grant?: string;
    verified_on?: Date;
}>;

/**
 * Fixture type for table "issues" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myIssuesFixture = fixture<IssuesFixture>({
 *   // ...
 * });
 *
 * const buildIssuesFixture: BuildFixture<IssuesFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type IssuesFixture = Fixture<{
    account_id?: number;
    account_identifier?: string;
    comments?: string;
    created_at: Date;
    description: string;
    due_date?: Date;
    id: number;
    payload?: string;
    reference_id: number;
    reference_type: "Account" | "Account Levelisation" | "Comm" | "Installation" | "Meter" | "Payment" | "Read";
    state: "Awaiting Answers" | "Blocked" | "Closed" | "In Progress" | "Open" | "Resolved" | "Unresolvable";
    type: "Account Levelisation" | "Account Pending" | "Installation" | "Meter" | "Payment" | "Read Tolerance";
}>;

/**
 * Fixture type for table "meter_reads" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myMeterReadsFixture = fixture<MeterReadsFixture>({
 *   // ...
 * });
 *
 * const buildMeterReadsFixture: BuildFixture<MeterReadsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type MeterReadsFixture = Fixture<{
    date: Date;
    id: number;
    serial_number: string;
    value: string;
}>;

/**
 * Fixture type for table "meters" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myMetersFixture = fixture<MetersFixture>({
 *   // ...
 * });
 *
 * const buildMetersFixture: BuildFixture<MetersFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type MetersFixture = Fixture<{
    created_at?: Date;
    distribution_region?: string;
    gsp?: string;
    hh_metered: boolean;
    id: number;
    make: string;
    model: string;
    mpan: string;
    serial_number: string;
    shared: boolean;
    source_system_id?: number;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "pets" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myPetsFixture = fixture<PetsFixture>({
 *   // ...
 * });
 *
 * const buildPetsFixture: BuildFixture<PetsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type PetsFixture = Fixture<{
    id: number;
    name: string;
    tag?: string;
}>;

/**
 * Fixture type for table "tariff_rates" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myTariffRatesFixture = fixture<TariffRatesFixture>({
 *   // ...
 * });
 *
 * const buildTariffRatesFixture: BuildFixture<TariffRatesFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type TariffRatesFixture = Fixture<{
    created_at?: Date;
    end_date_on?: Date;
    id: number;
    rate: string;
    source_system_id?: number;
    start_date_on: Date;
    tariff_id: number;
    updated_at?: Date;
}>;

/**
 * Fixture type for table "tariffs" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myTariffsFixture = fixture<TariffsFixture>({
 *   // ...
 * });
 *
 * const buildTariffsFixture: BuildFixture<TariffsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type TariffsFixture = Fixture<{
    code: string;
    created_at?: Date;
    id: number;
    source_system_id?: number;
    type: "Export" | "Generation" | "SEG";
    updated_at?: Date;
}>;

/**
 * Fixture type for table "transactions" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myTransactionsFixture = fixture<TransactionsFixture>({
 *   // ...
 * });
 *
 * const buildTransactionsFixture: BuildFixture<TransactionsFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type TransactionsFixture = Fixture<{
    amount: number;
    id?: string;
}>;

/**
 * Fixture type for table "users" with column types loaded from the database
 * You can use the type with a fixutre, or by creating a fixture builder
 *
 * \`\`\`typescript
 * import { fixture, BuildFixture } from '@ovotech/laminar-fixtures';
 * const myUsersFixture = fixture<UsersFixture>({
 *   // ...
 * });
 *
 * const buildUsersFixture: BuildFixture<UsersFixture> => ({ columns }) => fixture({
 *   // ...
 *   ...columns
 * });
 * \`\`\`
 */
export type UsersFixture = Fixture<{
    created_at?: Date;
    id: number;
    name: string;
}>;
"
`;
